--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.0.115",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-styled-components": "^3.0.5",
+    "now": "^14.0.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
